Add continuous deployment

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,6 +67,8 @@ services:
     depends_on: 
       - elasticsearch
       - logstash
+    command:
+      - "--strict.perms=false"
     networks:
       - stack
 
