Remove logstash ilm

--- a/elastic-config/logstash.conf
+++ b/elastic-config/logstash.conf
@@ -56,8 +56,7 @@ output {
     if [type] == "cowrie" {
         elasticsearch {
             hosts => ["elasticsearch:9200"]
-	    ilm_enabled => auto
-	    ilm_rollover_alias => "cowrie-logstash"
+            index => "cowrie-logstash"
         }
         stdout {
             codec => rubydebug
